NO INLINE STYLES YEAAAAAAH! :))))
HOOORAAAY :)))))

--- a/biy-bottom-info.html
+++ b/biy-bottom-info.html
@@ -5,12 +5,12 @@
 </head>
 <body>
     <div align="center">
-		<div style="height:1px; width:800px; background-color:grey;"> </div>
-		<p style="font-family: verdana, sans-serif; font-size: .85em; font-weight: normal; color: #404040; margin: 0px 0px,0px, 0px; padding: 0px 0px,0px, 0px;">
+		<div id="bottom-gray-line"> </div>
+		<p id="bottom-text">
 			Copyright 1995 - 2012, &#169; Build-It-Yourself. All rights reserved. 
 			<br>
 				269 Pearl Street, Cambridge, MA 02139, (617)547-9705,
-				<a style="color:black;" href="mailto:support@build-It-Yourself.com">Email</a>
+				<a id="bottom-email" href="mailto:support@build-It-Yourself.com">Email</a>
 			</br>
 		</p>
 	</div>
