made changes in the file structure and main page:
1. put the select-page contents in the main folder because select-page
didn't stand for selecting a module anymore.
2. re-linked the website after the changes in paths of some files
3. gave a new look to the Module of the week and Missions div's in the
module page.
4. deleted some files that are unnecessary: the content files for an LDD
module that's not going to be implemented in LDD + an old SQL file +the
backup for the main page (github has history of all commits & files so
it's findable if we need it)

--- a/biy-bottom-info.html
+++ b/biy-bottom-info.html
@@ -4,8 +4,8 @@
 	<link href="biy-stylesheet.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <div align="center">
-		<div id="bottom-gray-line"> </div>
+	<div id="bottom-gray-line"> </div>
+	<div class="centered-div">
 		<p id="bottom-text">
 			Copyright 1995 - 2012, &#169; Build-It-Yourself. All rights reserved. 
 			<br>
