fixed div height issue with IE
Needed to set fontsize to 1 px
Also took out stylesheet link in footer. It is uneeded.
the centered div class should not have the cursor turn into pointer. It
is used on module titles.

--- a/biy-bottom-info.html
+++ b/biy-bottom-info.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<style type="text/css">a {text-decoration: none}</style>
-	<link href="biy-stylesheet.css" rel="stylesheet" type="text/css">
+	<!--link href="biy-stylesheet.css" rel="stylesheet" type="text/css"-->
 </head>
 <body>
 	<div id="bottom-gray-line"> </div>
